--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope"></i> <a href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a>
-        <i class="bi bi-phone"></i><a href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a>
+        <i class="bi bi-phone"></i><a href="tel:+919545953370" class="call_float " target="_blank">+919545953370</a>
       </div>
     </div>
   </div>
@@ -81,14 +81,14 @@
           <li><a class="nav-link scrollto active" href="#hero">HOME</a></li>
           <li><a class="nav-link scrollto" href="#departments">SERVICES</a></li>
           <li><a class="nav-link scrollto" href="#gallery">GALLERY</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#departments">Departments</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#doctors">Doctors</a></li> -->
-          <li class="dropdown"><a href="/"><span>WE CARE FOR YOU</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+          <li><a class="nav-link scrollto" href="#our-times">OUR-TIMES</a></li>
+          <li class="dropdown"><a><span>WE CARE FOR YOU</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./AsthmaTips.html">ASTHAMA TIPS</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -204,7 +204,7 @@
                 <option value="">Select Location</option>
                 <option value="RAJGURUNAGAR">RAJGURUNAGAR</option>
                 <option value="CHAKAN">CHAKAN</option>
-                <option value="CHAKAN">MOSHI</option>
+                <!-- <option value="CHAKAN">MOSHI</option> -->
               </select>
               <div class="validate"></div>
             </div>
@@ -767,6 +767,57 @@
     </section>
     <!-- End Contact Section -->
 
+    <!-- ====== ADDRESS ======= -->
+    <!-- ====== ADDRESS ======= -->
+    <section id="our-times" class="why-us">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-4 d-flex align-items-stretch">
+            <div class="content">
+              <!-- <h3>Why Choose Us?</h3> -->
+              <div class="pic"><img src="assets/img/New folder/profile.jpg" class="img-fluid" alt=""></div>
+
+            </div>
+          </div>
+          <div class="col-lg-8 d-flex align-items-stretch">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-clinic"></i>
+                    <h4>RAJGURUNAGAR</h4>
+                    <p style="color:black">Bajarpeth , Near Janta Bakery
+                      Rajgurunagar, Tal-Khed
+                      Dist-Pune , 410505
+                    </p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-clinic"></i>
+                    <h4>CHAKAN</h4>
+                    <p style="color:black">Sankalp Polyclinic, Above Sankalp Medical, Ambethan Chowk, Tal-khed,
+                      Dist-Pune , 410501</p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch  time-info">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bi-watch"></i>
+                    <!-- <h4>TIME</h4> -->
+                    <p style="color:black"> RAJGURUNAGAR - 9:30 AM to 2:30 PM <br> MONDAY-SUNDAY</h4>
+                    <p style="color:black"> CHAKAN - 5 PM to 8:30 PM <br> MONDAY-SUNDAY</h4>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Why Us Section -->
+
   </main>
   <!-- End #main -->
 
@@ -779,11 +830,11 @@
 
           <div class="col-lg-3 col-md-6 footer-contact text-white">
             <h3 class="text-white">DR. OMKAR KAJALE</h3>
-            <p class="text-white">
-              Bajarpeth , Near Janta Bakery <br>
-              Rajgurunagar, Tal-Khed<br>
-              Dist-Maharashtra , 410505 <br><br>
-            </p>
+            <p> <strong class="text-white">Phone : </strong><a class="text-white" href="tel:+919665914363"
+                class="call_float " target="_blank"> +9195459533703</a><br>
+
+            <p> <strong class="text-white">Email : </strong><a class="text-white" href="mailto:info@dromkarkajale.com">
+                info@dromkarkajale.com</a></p>
           </div>
 
           <!-- <div class="col-lg-2 col-md-6 footer-links">
@@ -799,13 +850,12 @@
 
           <div class="col-lg-3 col-md-6 footer-links ">
             <h4 class="text-white">Our Times</h4>
-            <p class="text-white">9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
-              <br>
-            <p> <strong class="text-white">Phone : </strong><a class="text-white" href="tel:+919665914363"
-                class="call_float " target="_blank"> +919665914363</a><br>
+            <p class="text-white"> Rajgurunagar - 9:30 AM to 2:30 PM <br> MONDAY-SUNDAY</h4>
+            <p class="text-white"> Chakan - 5 PM to 8:30 PM <br> MONDAY-SUNDAY</h4>
 
-            <p> <strong class="text-white">Email : </strong><a class="text-white" href="mailto:info@dromkarkajale.com">
-                info@dromkarkajale.com</a></p> <br>
+
+              <br>
+              <br>
 
           </div>
 
